# complex_cmake

./: .gitignore
exe1/: CMakeLists.txt  main.cpp
libbar/: CMakeLists.txt  bar.cpp  bar.h
libfoo/: CMakeLists.txt  foo.cpp
